--- a/POS/POS.vbproj
+++ b/POS/POS.vbproj
@@ -134,6 +134,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MAIN FORMS\Class\Auth\AuthCls.vb" />
+    <Compile Include="MAIN FORMS\Class\ConfigManager\ReceiptInfoCls.vb" />
     <Compile Include="MAIN FORMS\Class\Inventory\InventoryCls.vb" />
     <Compile Include="MAIN FORMS\Class\Inventory\ModInventory.vb" />
     <Compile Include="MAIN FORMS\Class\Loading\ScriptRunnerCls.vb" />
